--- a/reading-list.html
+++ b/reading-list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-05-23 Tue 17:05 -->
+<!-- 2023-06-18 Sun 11:14 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Digital Bookshelf</title>
@@ -507,7 +507,7 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 <p>
 <center>
 <em>My inclusion of links on this page does not entail my endorsement. <br>
-Caveat Emptor.</em>
+Caveat lector.</em>
 </center>
 </p>
 </div>
