--- a/reading-list.html
+++ b/reading-list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-06-18 Sun 11:14 -->
+<!-- 2023-08-09 Wed 10:28 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Digital Bookshelf</title>
@@ -60,7 +60,7 @@ tbody > tr:first-of-type h4 {
 
 <p>
 <center>
-<em>Your local library may be an alternative to <a href="https://z-lib.is/">Z-Library</a>
+<em>Your local library may be an alternative to <a href="https://libgen.rs/">Library Genesis</a>
 or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </center>
 </p>
