--- a/reading-list.html
+++ b/reading-list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-08-09 Wed 10:28 -->
+<!-- 2023-10-04 Wed 12:08 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Digital Bookshelf</title>
@@ -64,30 +64,14 @@ tbody > tr:first-of-type h4 {
 or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </center>
 </p>
-
 <div id="outline-container-Math-and-Science" class="outline-2">
 <h2 id="Math-and-Science">Math and Science</h2>
-<div class="outline-text-2" id="text-orgd997e37">
+<div class="outline-text-2" id="text-org133a524">
 </div>
 <div id="outline-container-Physics" class="outline-3">
 <h3 id="Physics">Physics</h3>
-<div class="outline-text-3" id="text-orgdb7773d">
+<div class="outline-text-3" id="text-org47f7a04">
 <table>
-  <tr>
-    <td colspan="3">
-      <h4>Talks</h4>
-    </td>
-  </tr>
-  <tr>
-    <td><a href="https://www.youtube.com/watch?v=7Sn63t3BeMc">Decoherence and the Quantum Theory of the  Classical</a></td>
-    <td><a href="https://en.wikipedia.org/wiki/Wojciech_H._Zurek">Wojciech Zurek</a></td>
-    <td>2017</td>
-  </tr>
-  <tr>
-    <td><a href="https://www.youtube.com/watch?v=jhnKBKZvb_U">Why is Time a One-Way Street?</a></td>
-    <td><a href="https://en.wikipedia.org/wiki/Leonard_Susskind">Leonard Suskind</a></td>
-    <td>2007</td>
-  </tr>
   <tr>
     <td colspan="3">
       <h4>Lecture Series</h4>
@@ -113,13 +97,32 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
     <td><a href="https://en.wikipedia.org/wiki/V._Balakrishnan_%28physicist%29">V. Balakrishnan</a></td>
     <td>2008</td>
   </tr>
+  <tr>
+    <td colspan="3">
+      <h4>Talks</h4>
+    </td>
+  </tr>
+  <tr>
+    <td><a href="https://www.youtube.com/watch?v=7Sn63t3BeMc">Decoherence and the Quantum Theory of the  Classical</a></td>
+    <td><a href="https://en.wikipedia.org/wiki/Wojciech_H._Zurek">Wojciech Zurek</a></td>
+    <td>2017</td>
+  </tr>
+  <tr>
+    <td><a href="https://www.youtube.com/watch?v=PX9RfvTWeJU">The Universe is not Ergodic</a></td>
+    <td><a href="https://en.wikipedia.org/wiki/Sean_M._Carroll">Sean Carroll</a></td>
+    <td>2008</td>
+  </tr>
+  <tr>
+    <td><a href="https://www.youtube.com/watch?v=jhnKBKZvb_U">Why is Time a One-Way Street?</a></td>
+    <td><a href="https://en.wikipedia.org/wiki/Leonard_Susskind">Leonard Suskind</a></td>
+    <td>2007</td>
+  </tr>
 </table>
 </div>
 </div>
-
 <div id="outline-container-Computer-Science" class="outline-3">
 <h3 id="Computer-Science">Computer Science</h3>
-<div class="outline-text-3" id="text-org59cecc0">
+<div class="outline-text-3" id="text-orgbe63f5a">
 <table>
   <tr>
     <td colspan="3">
@@ -159,10 +162,9 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </table>
 </div>
 </div>
-
 <div id="outline-container-Mathematics" class="outline-3">
 <h3 id="Mathematics">Mathematics</h3>
-<div class="outline-text-3" id="text-org3912f9d">
+<div class="outline-text-3" id="text-org5846bbc">
 <table>
   <tr>
     <td> <a href="https://www.youtube.com/playlist?list=PLMrJAkhIeNNR20Mz-VpzgfQs5zrYi085m">Control Bootcamp</a></td>
@@ -177,10 +179,9 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </table>
 </div>
 </div>
-
 <div id="outline-container-General" class="outline-3">
 <h3 id="General">General</h3>
-<div class="outline-text-3" id="text-org6c5bbb5">
+<div class="outline-text-3" id="text-orgc693fd9">
 <table>
    <tr>
     <td colspan="3">
@@ -206,15 +207,13 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </div>
 </div>
 </div>
-
-
 <div id="outline-container-Humanities" class="outline-2">
 <h2 id="Humanities">Humanities</h2>
-<div class="outline-text-2" id="text-orgc7b1441">
+<div class="outline-text-2" id="text-org8582854">
 </div>
 <div id="outline-container-Anthropology" class="outline-3">
 <h3 id="Anthropology">Anthropology</h3>
-<div class="outline-text-3" id="text-orgdc49b3a">
+<div class="outline-text-3" id="text-org66b80b6">
 <table>
   <tr>
     <td colspan="3">
@@ -239,10 +238,9 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </table>
 </div>
 </div>
-
 <div id="outline-container-History" class="outline-3">
 <h3 id="History">History</h3>
-<div class="outline-text-3" id="text-org92b0733">
+<div class="outline-text-3" id="text-org5306c61">
 <table>
   <tr>
     <td colspan="3">
@@ -282,10 +280,9 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </table>
 </div>
 </div>
-
 <div id="outline-container-Economics-and-Finance" class="outline-3">
 <h3 id="Economics-and-Finance">Economics and Finance</h3>
-<div class="outline-text-3" id="text-orgc4027bc">
+<div class="outline-text-3" id="text-org8d9fefb">
 <table>
   <tr>
     <td colspan="3">
@@ -323,6 +320,11 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
     </td>
   </tr>
   <tr>
+    <td> <a href="https://www.youtube.com/watch?v=1f2blKai7HA&list=PLOLArO56vjuoeaIPzKQibBDbx2m_Rfsit">Wealth and Poverty</a></td>
+    <td> <a href="https://en.wikipedia.org/wiki/Robert_Reich">Robert Reich</a> </td>
+    <td> 2023 </td>
+  </tr>
+  <tr>
     <td> <a href="https://www.khanacademy.org/economics-finance-domain/core-finance">Finance and Capital Markets</a></td>
     <td> <a href="https://en.wikipedia.org/wiki/Khan_Academy">Khan Academy </a> </td>
     <td> 2013 </td>
@@ -330,10 +332,9 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </table>
 </div>
 </div>
-
 <div id="outline-container--American-Class-amp-Culture" class="outline-3">
 <h3 id="-American-Class-amp-Culture">(American) Class &amp; Culture</h3>
-<div class="outline-text-3" id="text-org84fe384">
+<div class="outline-text-3" id="text-orgb69ef57">
 <table>
   <tr>
     <td colspan="3">
@@ -394,20 +395,24 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </table>
 </div>
 </div>
-
 <div id="outline-container--Geo-Politics" class="outline-3">
 <h3 id="-Geo-Politics">(Geo)Politics</h3>
-<div class="outline-text-3" id="text-orgb342508">
+<div class="outline-text-3" id="text-orgcbac8a3">
 <table>
   <tr>
     <td colspan="3">
-      <h4>Videos</h4>
+      <h4>Lectures</h4>
     </td>
   </tr>
   <tr>
     <td><a href="https://www.youtube.com/watch?v=UgRS2NlcULM">US interventionism, the 3rd World, and The USSR</a></td>
     <td><a href="https://en.wikipedia.org/wiki/Michael_Parenti">Michael Parenti</a></td>
     <td>1986</td>
+  </tr>
+  <tr>
+    <td colspan="3">
+      <h4>Channels</h4>
+    </td>
   </tr>
   <tr>
     <td colspan="3"><a href="https://www.youtube.com/user/CaspianReport">Caspian Report (Youtube Channel)</a></td>
@@ -419,10 +424,9 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </div>
 </div>
 </div>
-
 <div id="outline-container-Personal" class="outline-2">
 <h2 id="Personal">Personal</h2>
-<div class="outline-text-2" id="text-org3844ca1">
+<div class="outline-text-2" id="text-org5108377">
 <table>
   <tr>
     <td colspan="3">
@@ -466,16 +470,15 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
   </tr>
   <tr>
     <td><a href="https://en.wikipedia.org/wiki/David_Foster_Wallace">David Foster Wallace</a></td>
-    <td><a href="https://www.youtube.com/watch?v=PhhC_N6Bm_s">This is Water</a></td>
+    <td><a href="https://www.youtube.com/watch?v=ms2BvRbjOYo">This is Water</a></td>
     <td>2005</td>
   </tr>
 </table>
 </div>
 </div>
-
 <div id="outline-container-Fiction" class="outline-2">
 <h2 id="Fiction">Fiction</h2>
-<div class="outline-text-2" id="text-org09b2343">
+<div class="outline-text-2" id="text-org4cab87a">
 <table>
   <tr>
     <td colspan="3">
@@ -484,22 +487,27 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
   </tr>
   <tr>
     <td> <a href="https://en.wikipedia.org/wiki/A_Deepness_in_the_Sky">A Deepness in the Sky</a></td>
-    <td> Vernor Vinge </td>
+    <td> <a href="https://en.wikipedia.org/wiki/Vernor_Vinge">Vernor Vinge</a> </td>
     <td> 1999 </td>
   </tr>
   <tr>
+    <td> <a href="https://www.gnu.org/philosophy/right-to-read.html">The Right to Read</a></td>
+    <td> <a href="https://stallman.org/">Richard Stallman</td>
+    <td> 1997 </td>
+  </tr>
+  <tr>
     <td> <a href="https://en.wikipedia.org/wiki/A_Fire_Upon_the_Deep">A Fire Upon the Deep</a></td>
-    <td> Vernor Vinge </td>
+    <td> <a href="https://en.wikipedia.org/wiki/Vernor_Vinge">Vernor Vinge</a> </td>
     <td> 1992 </td>
   </tr>
   <tr>
     <td> <a href="https://en.wikipedia.org/wiki/Catch-22">Catch-22</a></td>
-    <td> Joseph Heller </td>
+    <td> <a href="https://en.wikipedia.org/wiki/Joseph_Heller">Joseph Heller</a> </td>
     <td> 1961 </td>
   </tr>
   <tr>
     <td> <a href="https://en.wikipedia.org/wiki/Nineteen_Eighty-Four">Nineteen Eighty-Four</a></td>
-    <td> George Orwell </td>
+    <td> <a href="https://en.wikipedia.org/wiki/George_Orwell">George Orwell</a> </td>
     <td> 1949 </td>
   </tr>
 </table>
