--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-06-17 Sat 21:11 -->
+<!-- 2023-10-04 Wed 09:36 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Reilly Raab</title>
@@ -24,10 +24,9 @@
 <main id="content" class="content">
 <header>
 <h1 class="title">Reilly Raab</h1>
-</header>
-<div id="outline-container-Pages" class="outline-2">
+</header><div id="outline-container-Pages" class="outline-2">
 <h2 id="Pages">Pages</h2>
-<div class="outline-text-2" id="text-org139bb47">
+<div class="outline-text-2" id="text-orgd977941">
 <p>
 <a href="./site-info.html">Technical Site Info</a> <br>
 <a href="./about.html">Curriculum Vitae</a> <br>
@@ -36,10 +35,9 @@
 </p>
 </div>
 </div>
-
 <div id="outline-container-Notes" class="outline-2">
 <h2 id="Notes">Notes</h2>
-<div class="outline-text-2" id="text-orga750219">
+<div class="outline-text-2" id="text-org4730eb4">
 <p>
 <a href="./julia.html">Julia Sets</a> <br>
 <a href="./euler-lagrange.html">Calculus of Variations</a> <br>
@@ -48,10 +46,9 @@
 </p>
 </div>
 </div>
-
 <div id="outline-container-Projects" class="outline-2">
 <h2 id="Projects">Projects</h2>
-<div class="outline-text-2" id="text-orge9b9aa4">
+<div class="outline-text-2" id="text-orgf9b036b">
 <p>
 <a href="./chess.html">Chess</a> <br>
 <a href="./dark-chess.html">Dark Chess</a> <br>
