cv, reading-list

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-10-04 Wed 17:16 -->
+<!-- 2023-10-13 Fri 14:41 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Curriculum Vitae</title>
@@ -46,7 +46,7 @@ table {
   <div>
 
 
-<figure id="org92b41a6">
+<figure id="orga79d430">
 <img src="./img/2022.jpg" alt="2022.jpg">
 
 <figcaption><span class="figure-number">Figure 1: </span>Me (in red).</figcaption>
@@ -185,9 +185,9 @@ abroad, remotely developing software related to automated circuit design.
 </ul>
 </div>
 </div>
-<div id="outline-container-Expertise" class="outline-2">
-<h2 id="Expertise">Expertise</h2>
-<div class="outline-text-2" id="text-org3ada46b">
+<div id="outline-container-Proficiencies" class="outline-2">
+<h2 id="Proficiencies">Proficiencies</h2>
+<div class="outline-text-2" id="text-org8e69034">
 <table>
 
 
@@ -476,44 +476,44 @@ abroad, remotely developing software related to automated circuit design.
 <h2 id="Publications">Publications</h2>
 <div class="outline-text-2" id="text-orgc98ed4e">
 <p>
-<a href="https://arxiv.org/abs/2304.09362">Long-Term Fairness with Unknown Dynamics</a> <br>
+(7) <a href="https://arxiv.org/abs/2304.09362">Long-Term Fairness with Unknown Dynamics</a> <br>
 Tongxin Yin, <strong>Reilly Raab</strong>, Mingyan Liu, and Yang Liu <br>
 <em>ICLR RTML (2023) &#x2013; <strong>Best Paper Runner-Up</strong>, <strong>Highlighted Paper Award</strong></em> <br>
 <em>NeurIPS. (2023)</em>
 </p>
 
 <p>
-Fair Participation via Sequential Policies <br>
+(6) Fair Participation via Sequential Policies <br>
 <strong>Reilly Raab</strong>, Ross Boczar, Maryam Fazel, and Yang Liu <br>
 <em>arXiv. (To appear)</em>
 </p>
 
 <p>
-<a href="https://arxiv.org/abs/2208.13898">Conjugate Natural Selection</a> <br>
+(5) <a href="https://arxiv.org/abs/2208.13898">Conjugate Natural Selection</a> <br>
 <strong>Reilly Raab</strong>, Luca de Alfaro, and Yang Liu <br>
 <em>arXiv. (2022)</em>
 </p>
 
 <p>
-<a href="https://openreview.net/pdf?id=U3gobB4oKv">Fairness Transferability Subject to Bounded Distribution Shift</a> <br>
+(4) <a href="https://openreview.net/pdf?id=U3gobB4oKv">Fairness Transferability Subject to Bounded Distribution Shift</a> <br>
 Yatong Chen<sup><a id="fnr.1" class="footref" href="#fn.1" role="doc-backlink">[1]</a></sup>, <strong>Reilly Raab</strong><sup><a id="fnr.1.100" class="footref" href="#fn.1" role="doc-backlink">[1]</a></sup>, Jialu Wang, and Yang Liu <br>
 <em>NeurIPS. (2022)</em>
 </p>
 
 <p>
-<a href="https://proceedings.neurips.cc/paper/2021/file/db00f1b7fdf48fd26b5fb5f309e9afaf-Paper.pdf">Unintended Selection: Persistent Qualification Rate Disparities and Interventions</a> <br>
+(3) <a href="https://proceedings.neurips.cc/paper/2021/file/db00f1b7fdf48fd26b5fb5f309e9afaf-Paper.pdf">Unintended Selection: Persistent Qualification Rate Disparities and Interventions</a> <br>
 <strong>Reilly Raab</strong> and Yang liu <br>
 <em>NeurIPS. (2021) &#x2013; <strong>Spotlight Paper Award</strong></em>
 </p>
 
 <p>
-<a href="http://web.physics.ucsb.edu/~martinisgroup/theses/Raab2015.pdf">Single-Gate Error for Superconducting Qubits Imposed by Sideband Products of IQ Mixing</a> <br>
+(2) <a href="http://web.physics.ucsb.edu/~martinisgroup/theses/Raab2015.pdf">Single-Gate Error for Superconducting Qubits Imposed by Sideband Products of IQ Mixing</a> <br>
 <strong>Reilly Raab</strong> <br>
 <em>Undergraduate Thesis. (2015)</em>
 </p>
 
 <p>
-<a href="https://pubs.rsc.org/en/content/articlehtml/2014/mh/c3mh00089c">Systematic study of exciton diffusion length in organic semiconductors by six experimental methods</a> <br>
+(1) <a href="https://pubs.rsc.org/en/content/articlehtml/2014/mh/c3mh00089c">Systematic study of exciton diffusion length in organic semiconductors by six experimental methods</a> <br>
 Jason D. A. Lin <strong>et. al.</strong> <br>
 <em>Materials Horizons. (2014)</em>
 </p>
