--- a/reading-list.html
+++ b/reading-list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-10-04 Wed 12:08 -->
+<!-- 2023-10-13 Fri 14:36 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Digital Bookshelf</title>
@@ -124,6 +124,16 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 <h3 id="Computer-Science">Computer Science</h3>
 <div class="outline-text-3" id="text-orgbe63f5a">
 <table>
+  <tr>
+    <td colspan="3">
+      <h4>Books</h4>
+    </td>
+  </tr>
+  <tr>
+    <td> <a href="https://archive.org/details/societyofmind00marv">The Society of Mind</a></td>
+    <td> <a href="https://en.wikipedia.org/wiki/Marvin_Minsky">Marvin Minsky
+    <td> 1986 </td>
+  </tr>
   <tr>
     <td colspan="3">
       <h4>Papers / Transcribed Lectures</h4>
