detect webgl context

--- a/satellites.html
+++ b/satellites.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-10-15 Sun 20:21 -->
+<!-- 2023-10-15 Sun 21:12 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Hourly Satellite Imagery</title>
@@ -37,7 +37,7 @@ combines data from five geostationary satellites
 <a href="https://en.wikipedia.org/wiki/GOES-16">GOES-16</a>,
 <a href="https://en.wikipedia.org/wiki/GOES-18">GOES-18</a>,
 <a href="https://en.wikipedia.org/wiki/Meteosat">Meteosat-9</a> and
-<a href="https://en.wikipedia.org/wiki/Meteosat">Meteosat-10</a>), generated at hourly
+<a href="https://en.wikipedia.org/wiki/Meteosat">Meteosat-10</a>), published at hourly
 intervals at 8 km spatial resolution.
 </p>
 
